--- a/web-site/common/css/fontStyle.css
+++ b/web-site/common/css/fontStyle.css
@@ -1,5 +1,5 @@
 .xiaoMi {
-	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif,"color":red;
 }
 .tbTechCenter{
 	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
